<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/container"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <TextView
        android:id="@+id/text_view"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="70dp"
        android:layout_marginHorizontal="@dimen/marzin_zero"
        android:layout_gravity="bottom|end"
        android:textColor="@color/white"
        android:text="@string/title_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>
   <LinearLayout
       android:layout_marginBottom="@dimen/margin_linear"
       android:id="@+id/container"
       app:layout_constraintBottom_toBottomOf="parent"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:ignore="MissingConstraints">

       <LinearLayout
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/clear"
               android:onClick="onClick"
               android:textColor="@color/black"
               android:textSize="25sp"
               android:layout_marginEnd="@dimen/margin_clear"
               style="@style/Gray_Bottom"
               android:text="@string/title_ac"/>
           <com.google.android.material.button.MaterialButton
               android:textColor="@color/black"
               android:textSize="24sp"
               android:layout_marginEnd="@dimen/margin_plus_minus"
               style="@style/Gray_Bottom"
               android:text="@string/title_plus_minus"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/procent"
               android:onClick="onOperationClick"
               style="@style/Gray_Bottom"
               android:layout_marginEnd="@dimen/margin_procent"
               android:text="@string/title_procent"
               android:textColor="@color/black" />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/division"
               android:onClick="onOperationClick"
               android:textColor="@color/white"
               android:textSize="25sp"
               style="@style/Orange_Bottom"
               android:text="@string/title_division"/>
       </LinearLayout>
       <LinearLayout
           android:gravity="center"
           android:paddingHorizontal="18dp"
           android:paddingVertical="6dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:onClick="onClick"
               android:textColor="@color/white"
               android:id="@+id/num7"
               android:layout_marginEnd="@dimen/margin_7"
               style="@style/darkGray_Bottom"
               android:text="@string/title_7"/>
           <com.google.android.material.button.MaterialButton
               android:onClick="onClick"
               android:id="@+id/num8"
               android:textColor="@color/white"
               android:layout_marginEnd="@dimen/margin_8"
               style="@style/darkGray_Bottom"
               android:text="@string/title_8"/>
           <com.google.android.material.button.MaterialButton
               android:onClick="onClick"
               android:textColor="@color/white"
               android:id="@+id/num9"
               android:layout_marginEnd="@dimen/margin_9"
               style="@style/darkGray_Bottom"
               android:text="@string/title_9"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/multiply"
               android:onClick="onOperationClick"
               android:textColor="@color/white"
               style="@style/Orange_Bottom"
               android:textSize="25sp"
               android:text="@string/title_x"/>
       </LinearLayout>

       <LinearLayout
           android:gravity="center"
           android:paddingHorizontal="15dp"
           android:paddingVertical="6dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:onClick="onClick"
               android:id="@+id/num4"
               android:layout_marginEnd="@dimen/margin_4"
               style="@style/darkGray_Bottom"
               android:text="@string/title_4"/>
           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:onClick="onClick"
               android:id="@+id/num5"
               android:layout_marginEnd="@dimen/margin_5"
               style="@style/darkGray_Bottom"
               android:text="@string/title_5"/>
           <com.google.android.material.button.MaterialButton
               android:onClick="onClick"
               android:textColor="@color/white"
               android:id="@+id/num6"
               android:layout_marginEnd="@dimen/margin_6"
               style="@style/darkGray_Bottom"
               android:text="@string/title_6"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/minus"
               android:onClick="onOperationClick"
               android:textColor="@color/white"
               style="@style/Orange_Bottom"
               android:textSize="44dp"
               android:text="@string/title_minus"/>
       </LinearLayout>
       <LinearLayout
           android:gravity="center"
           android:paddingHorizontal="15dp"
           android:paddingVertical="6dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/num1"
               android:textColor="@color/white"
               android:onClick="onClick"
               android:layout_marginEnd="@dimen/margin_1"
               style="@style/darkGray_Bottom"
               android:text="@string/title_1"/>
           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:onClick="onClick"
               android:id="@+id/num2"
               android:layout_marginEnd="@dimen/margin_2"
               style="@style/darkGray_Bottom"
               android:text="@string/title_2"/>
           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:onClick="onClick"
               android:id="@+id/num3"
               android:layout_marginEnd="@dimen/margin_3"
               style="@style/darkGray_Bottom"
               android:text="@string/title_3"/>
           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:id="@+id/plus"
               android:onClick="onOperationClick"
               style="@style/Orange_Bottom"
               android:text="@string/title_plus"/>
       </LinearLayout>
       <LinearLayout
           android:gravity="center"
           android:paddingHorizontal="18dp"
           android:paddingVertical="6dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">


           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:onClick="onClick"
               android:id="@+id/num0"
               android:paddingStart="25dp"
               android:layout_width="154dp"
               android:layout_marginEnd="@dimen/margin_0"
              android:textAlignment="textStart"
               style="@style/darkGray_Bottom"
               android:text="@string/title_zero"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/tochka"
               android:onClick="onClick"
               android:textColor="@color/white"
               android:layout_marginEnd="@dimen/margin_tochka"
               style="@style/darkGray_Bottom"
               android:text="@string/title_tochka"/>
           <com.google.android.material.button.MaterialButton
               android:textColor="@color/white"
               android:id="@+id/iqual"
               android:onClick="onOperationClick"
               style="@style/Orange_Bottom"
               android:text="@string/title_iqual"/>
       </LinearLayout>





   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>